# fintel

./: .gitignore  LICENSE  PUBLISHING.md  README.md  fintel_package.ipynb  pyproject.toml  setup.py
.github/workflows/: publish.yml
fintel/: __init__.py  alerts.py  core.py  dashboard.py  metrics.py  signals.py
presentation/: build.js  build_report.js  build_rubric.js  build_speaker_script.js  build_v2.js  build_video_script.js  fintel_FE520_design_report.docx  fintel_FE520_presentation.pptx  fintel_FE520_presentation_v2.pptx  fintel_FE520_rubric.docx  fintel_FE520_speaker_script.docx  fintel_FE520_video_script.docx  package-lock.json  package.json  postprocess.js
